增强侧边栏的功能

--- a/classes.html
+++ b/classes.html
@@ -43,8 +43,57 @@
             fill: currentColor
         }
 
+        .dropdown-toggle {
+            outline: 0
+        }
+
         .nav-flush .nav-link {
             border-radius: 0
+        }
+
+        .btn-toggle {
+            display: inline-flex;
+            align-items: center;
+            padding: .25rem .5rem;
+            font-weight: 600;
+            color: rgba(0, 0, 0, .65);
+            background-color: transparent;
+            border: 0
+        }
+
+        .btn-toggle:hover,
+        .btn-toggle:focus {
+            color: rgba(0, 0, 0, .85);
+            background-color: #d2f4ea
+        }
+
+        .btn-toggle::before {
+            width: 1.25em;
+            line-height: 0;
+            content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%280,0,0,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
+            transition: transform .35s ease;
+            transform-origin: .5em 50%
+        }
+
+        .btn-toggle[aria-expanded="true"] {
+            color: rgba(0, 0, 0, .85)
+        }
+
+        .btn-toggle[aria-expanded="true"]::before {
+            transform: rotate(90deg)
+        }
+
+        .btn-toggle-nav a {
+            display: inline-flex;
+            padding: .1875rem .5rem;
+            margin-top: .125rem;
+            margin-left: 1.25rem;
+            text-decoration: none
+        }
+
+        .btn-toggle-nav a:hover,
+        .btn-toggle-nav a:focus {
+            background-color: #d2f4ea
         }
 
         .scrollarea {
@@ -155,13 +204,26 @@
                         用户管理
                     </a>
                 </li>
-                <li>
-                    <a href="http://202.197.75.107:8080/classes.html" class="nav-link active">
-                        <svg class="bi me-2" width="16" height="16">
-                            <use xlink:href="#table" />
-                        </svg>
-                        课程管理
-                    </a>
+                <li class="mb-1">
+                    <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse"
+                        data-bs-target="#dashboard-collapse" aria-expanded="false">
+                        <a href="#" class="nav-link active">
+                            <svg class="bi me-2" width="16" height="16">
+                                <use xlink:href="#table" />
+                            </svg>
+                            课程管理
+                        </a>
+                    </button>
+                    <div class="collapse" id="dashboard-collapse">
+                        <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                            <!-- <li><a href="http://202.197.75.107:8080/public/php_service/panel_admin_user.php#one" class="link-dark rounded">管理与查询</a></li>
+                            <li><a href="http://202.197.75.107:8080/public/php_service/panel_admin_user.php#add_user_result" class="link-dark rounded">添加用户</a></li> -->
+                            <li><a href="javascript:void(document.getElementById('ifr').src='http://202.197.75.107:8080/public/php_service/panel_admin_class.php#query')"
+                                    class="link-dark rounded">管理与查询</a></li>
+                            <li><a href="javascript:void(document.getElementById('ifr').src='http://202.197.75.107:8080/public/php_service/panel_admin_class.php#add')"
+                                    class="link-dark rounded">添加课程</a></li>
+                        </ul>
+                    </div>
                 </li>
                 <li>
                     <a href="http://202.197.75.107:8080/students.html" class="nav-link link-dark">
@@ -190,7 +252,7 @@
         <!--内容开始-->
         <div class="iframe-container">
             <!--面板实际地址-->
-            <iframe src="http://202.197.75.107:8080/public/php_service/panel_admin_class.php"></iframe>
+            <iframe src="http://202.197.75.107:8080/public/php_service/panel_admin_class.php" id="ifr"></iframe>
         </div>
 
 
