添加退出登录按钮

--- a/home.html
+++ b/home.html
@@ -182,7 +182,13 @@
             </ul>
             <hr>
             <div class="dropdown">
-
+                <!--下方-->
+                    <a href="http://202.197.75.107:8080/public/php_service/auth_query.php?session=destroy" class="nav-link link-dark">
+                        <svg class="bi me-2" width="16" height="16">
+                            <use xlink:href="#people-circle" />
+                        </svg>
+                        退出登录
+                    </a>
             </div>
         </div>
         <!-- <div class="b-example-divider"></div> -->
