--- a/scores.html
+++ b/scores.html
@@ -43,57 +43,8 @@
             fill: currentColor
         }
 
-        .dropdown-toggle {
-            outline: 0
-        }
-
         .nav-flush .nav-link {
             border-radius: 0
-        }
-
-        .btn-toggle {
-            display: inline-flex;
-            align-items: center;
-            padding: .25rem .5rem;
-            font-weight: 600;
-            color: rgba(0, 0, 0, .65);
-            background-color: transparent;
-            border: 0
-        }
-
-        .btn-toggle:hover,
-        .btn-toggle:focus {
-            color: rgba(0, 0, 0, .85);
-            background-color: #d2f4ea
-        }
-
-        .btn-toggle::before {
-            width: 1.25em;
-            line-height: 0;
-            content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%280,0,0,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
-            transition: transform .35s ease;
-            transform-origin: .5em 50%
-        }
-
-        .btn-toggle[aria-expanded="true"] {
-            color: rgba(0, 0, 0, .85)
-        }
-
-        .btn-toggle[aria-expanded="true"]::before {
-            transform: rotate(90deg)
-        }
-
-        .btn-toggle-nav a {
-            display: inline-flex;
-            padding: .1875rem .5rem;
-            margin-top: .125rem;
-            margin-left: 1.25rem;
-            text-decoration: none
-        }
-
-        .btn-toggle-nav a:hover,
-        .btn-toggle-nav a:focus {
-            background-color: #d2f4ea
         }
 
         .scrollarea {
@@ -121,7 +72,7 @@
                 font-size: 3.5rem
             }
         }
-        
+
         .iframe-container {
             position: relative;
             width: 100%;
@@ -231,7 +182,13 @@
             </ul>
             <hr>
             <div class="dropdown">
-
+                <!--下方-->
+                <a href="http://202.197.75.107:8080/public/php_service/auth_query.php?session=destroy" class="nav-link link-dark">
+                    <svg class="bi me-2" width="16" height="16">
+                        <use xlink:href="#people-circle" />
+                    </svg>
+                    退出登录
+                </a>
             </div>
         </div>
         <!-- <div class="b-example-divider"></div> -->
